Bug 290123 - Broken context view, not showing what it should
Summary: Broken context view, not showing what it should
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (other bugs)
Version First Reported In: 2.5.0
Platform: Ubuntu Linux
: VHI critical
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords: regression, release_blocker
: 290125 290474 291532 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-29 21:07 UTC by mgolden
Modified: 2014-11-01 06:40 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of amarok, showing the messed up Context panel (292.41 KB, image/png)
2011-12-29 21:07 UTC, mgolden
Details
Amarok 2.5.0 on KDE 4.7.95 (443.32 KB, image/png)
2011-12-30 23:05 UTC, mgolden
Details
fix (2.08 KB, application/octet-stream)
2012-01-03 13:33 UTC, Marco Martin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mgolden 2011-12-29 21:07:42 UTC
Created attachment 67232 [details]
screenshot of amarok, showing the messed up Context panel

Version:           2.4.90 (2.5 beta) (using Devel) 
OS:                Linux

Recently I upgraded Amarok 2.4.90.  In the context view I used to see the applets I had configured - Current Track, Lyrics, Video, Wikipedia, Info, and Upcoming Events.

As you can see from the attached screenshot, some of these are no longer appearing.  I don't see the configuration bar on the bottom either.

See the attached screenshot

Reproducible: Always

Steps to Reproduce:
Install Amarok 2.4 from Kubuntu 11.10
Install the applets listed above
Upgrade to the 4.7.95 version of KDE from the kubuntu-beta ppa

Actual Results:  
Context menu is unusable, as attached

Expected Results:  
Should have seen the applets I already had, plus the configuration bar.

OS: Linux (x86_64) release 3.0.0-14-generic
Compiler: gcc
Comment 1 Myriam Schweingruber 2011-12-30 21:33:13 UTC
Please upgrade to Amarok 2.5 final and make sure you erase the amarok configuration files in $HOME/.kde/share/config/
Comment 2 Myriam Schweingruber 2011-12-30 21:33:57 UTC
*** Bug 290125 has been marked as a duplicate of this bug. ***
Comment 3 mgolden 2011-12-30 23:05:01 UTC
Created attachment 67267 [details]
Amarok 2.5.0 on KDE 4.7.95
Comment 4 mgolden 2011-12-30 23:06:34 UTC
Better. but still not right.  As can be seen from the above screenshot, I have no way to configure the context menu.

I am running on KDE 4.7.95 beta, from the kubuntu-beta ppa
Comment 5 Myriam Schweingruber 2011-12-31 10:54:33 UTC
Did you erase the previous configuration files? I can't reproduce this here at all, using the same configuration as you do.
Comment 6 mgolden 2012-01-01 07:23:33 UTC
I just re-deleted them, as follows:

~> rm ~/.kde/share/config/am*
rm: remove regular file `/home/mgolden/.kde/share/config/amarok-appletsrc'? y
rm: remove regular file `/home/mgolden/.kde/share/config/amarok_homerc'? y
rm: remove regular file `/home/mgolden/.kde/share/config/amarokrc'? y

It still looks the same.  Is there some other file I should be deleting?
Comment 7 mgolden 2012-01-01 07:53:23 UTC
I just tried this:

*) Uninstalled amarok
*) Deleted all files under ~/.kde that contained the word "amarok" or "Amarok" in the title
*) restarted the machine
*) reinstalled amarok

Still, no dice.  There is no way to configure the context view.

I am running the Dec 22 build from kubuntu-backports.  Is this the same as you have?
Comment 8 Rainer Sigle 2012-01-01 08:30:42 UTC
This bug seems to be more like a general context view issue, than specific to the tabs-applet. Please update component.
Comment 9 Myriam Schweingruber 2012-01-01 14:24:06 UTC
I think the problem is related to KDE 4.8 RC1, so most likely a plasma bug. I can reproduce this after upgrading to KDE 4.8 RC1
Comment 10 Myriam Schweingruber 2012-01-01 14:25:09 UTC
Setting status correctly.
Comment 11 Myriam Schweingruber 2012-01-03 08:31:30 UTC
*** Bug 290474 has been marked as a duplicate of this bug. ***
Comment 12 Marco Martin 2012-01-03 13:33:11 UTC
Created attachment 67381 [details]
fix

the toolbar "used" an old containment bug:
the toolbar is a child of the containment (and as such should be viewed inside the containment and in the same qgraphicsview)

in the past items outside where visible causing nice things like desktop applets becoming visible in the panel.

this patch makes the toolbar no more a child of the containment, making everything work as it used to, even tough the "real" fix would be a little redesign using only one view and the toolbar part of the containment itself
Comment 13 Bart Cerneels 2012-01-04 08:36:09 UTC
(In reply to comment #12)
> this patch makes the toolbar no more a child of the containment, making
> everything work as it used to, even tough the "real" fix would be a little
> redesign using only one view and the toolbar part of the containment itself

That would mean re-doing the coloring of the toolbar frame (a widget, not plasmoid nor CV item). Since no-one has the time and it influences the look I'm seriously against that. Let's stick to what works again thanks to your patch. To bad we didn't catch this before 2.5.
Comment 14 Marco Martin 2012-01-05 13:12:45 UTC
ok, so i can push it? (master?)
Comment 15 Myriam Schweingruber 2012-01-05 15:55:31 UTC
If you tested it, yes, of course :)
Comment 16 Marco Martin 2012-01-05 16:00:14 UTC
Git commit 1b2e221a9854d0ae377b04478fe8000c138c3511 by Marco Martin.
Committed on 05/01/2012 at 16:59.
Pushed by mart into branch 'master'.

contextview taskbar not child of containment

the containment being parent can control its appearance, such as clipping

M  +4    -2    src/context/ToolbarView.cpp
M  +34   -0    src/context/toolbar/AppletToolbar.cpp
M  +3    -0    src/context/toolbar/AppletToolbar.h

http://commits.kde.org/amarok/1b2e221a9854d0ae377b04478fe8000c138c3511
Comment 17 Marco Martin 2012-01-05 16:15:45 UTC
Git commit b3d81df5d7131676fdc7bebbb5aae10b200221fa by Marco Martin.
Committed on 05/01/2012 at 17:06.
Pushed by mart into branch 'master'.

solve the conflict

sorry about that

M  +1    -22   src/context/toolbar/AppletToolbar.cpp

http://commits.kde.org/amarok/b3d81df5d7131676fdc7bebbb5aae10b200221fa
Comment 18 Christian (Fuchs) 2012-01-05 18:42:02 UTC
Duplicate of https://bugs.kde.org/show_bug.cgi?id=288575  (or vice versa), and currently compiling the new fix to test.
Comment 19 Christian (Fuchs) 2012-01-05 19:05:02 UTC
Marco: 

While the buttons are back with this change, the other problem described in https://bugs.kde.org/show_bug.cgi?id=288575  (wrong applet geometry until resized) is still happening. 

Could you have a look whether this has a similar cause? 

Thank you very much.
Comment 20 Marco Martin 2012-01-05 19:14:47 UTC
the other problem doesn't seem to happen here (both kde and qt 4.8)
but seems unlikely the two issues are connected
Comment 21 Myriam Schweingruber 2012-01-15 01:58:08 UTC
*** Bug 291532 has been marked as a duplicate of this bug. ***