contextview taskbar not child of containment

the containment being parent can control its appearance, such as clipping
BUG:290123